hphp/test/slow/readonly/inout_readonly_assign.php.expectf

Fatal error: Cannot write a readonly value to an inout parameter in %s on line 6
